<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".UserDetailsActivity">

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="121dp"
        android:layout_height="99dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="255dp"
        android:layout_height="29dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/tvProfileAge"
        android:layout_width="252dp"
        android:layout_height="30dp"
        android:text="@string/age"
        android:textSize="18sp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileName"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/tvProfileGender"
        android:layout_width="254dp"
        android:layout_height="29dp"
        android:text="@string/gender"
        android:textSize="18sp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileAge"
        app:layout_constraintVertical_bias="0.087" />

    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="252dp"
        android:layout_height="28dp"
        android:text="@string/email"
        android:textSize="18sp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileGender"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/tvProfilePhone"
        android:layout_width="260dp"
        android:layout_height="29dp"
        android:text="@string/phone"
        android:textSize="18sp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileEmail"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfilePhone"
        app:layout_constraintVertical_bias="0.258" />

    <TextView
        android:id="@+id/tvProfilePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="#2196F3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEdit"
        app:layout_constraintVertical_bias="0.312" />
</androidx.constraintlayout.widget.ConstraintLayout>