<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".UpdateProfile">


    <EditText
        android:id="@+id/etRName"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:autofillHints=""
        android:background="@color/cardview_light_background"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/etPhoneNo"
        android:layout_width="207dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/phone_no"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintVertical_bias="0.152" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:autofillHints=""
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRName"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:autoLink="all"
        android:scrollbars="vertical"
        android:scrollHorizontally="true"
        android:text="@string/update"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNo"
        app:layout_constraintVertical_bias="0.402" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="132dp"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/etDOB"
        android:layout_width="203dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@color/cardview_light_background"
        android:drawableEnd="@drawable/ic_date_range_black_24dp"
        android:drawableRight="@drawable/ic_date_range_black_24dp"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAge"
        app:layout_constraintVertical_bias="0.072" />

    <EditText
        android:id="@+id/etGender"
        android:layout_width="207dp"
        android:layout_height="46dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDOB"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="214dp"
        android:layout_height="42dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGender"
        app:layout_constraintVertical_bias="0.105" />

</androidx.constraintlayout.widget.ConstraintLayout>